# FFNN-Scratch

./: .gitignore  README.md  pyproject.toml
results/: he_initializer.npz  integration_test_model.npz  normal_initializer.npz  uniform_initializer.npz  xavier_initializer.npz  zero_initializer.npz
src/: Pengujian.ipynb  Testing.ipynb  main.py
src/model/: activations.py  engine.py  initializer.py  layers.py  loss.py  neural_network.py  optimizer.py
src/utils/: data_loader.py  visualization.py
tests/: activation_analysis.ipynb  depth_width_analysis.ipynb  learning_rate_analysis.ipynb  optimizer_analyzer.ipynb  regularization_analysis.ipynb  scikit_comparison.ipynb  sklearn_comparison.ipynb  testing.ipynb  weight_init_analyzer.ipynb  weight_init_comparison.ipynb
