[project]
name = "ffnn-scratch"
version = "0.1.0"
description = "Feedforward neural network from scratch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[tool.uv]
package = false
